// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffStat expandedCounts 1`] = `
<div
  className="diff-stat"
  data-tooltip="1 addition, 2 changes, 3 deletions"
>
  <strong
    className="text-success mr-1"
  >
    +
    1
  </strong>
  <strong
    className="text-warning mr-1"
  >
    •
    2
  </strong>
  <strong
    className="text-danger"
  >
    −
    3
  </strong>
</div>
`;

exports[`DiffStat standard 1`] = `
<div
  className="diff-stat"
  data-tooltip="1 addition, 2 changes, 3 deletions"
>
  <small>
    8
  </small>
</div>
`;

exports[`DiffStatSquares 1`] = `
<div
  className="diff-stat__squares"
>
  <div
    className="diff-stat__square bg-success"
  />
  <div
    className="diff-stat__square bg-warning"
  />
  <div
    className="diff-stat__square bg-danger"
  />
  <div
    className="diff-stat__square bg-danger"
  />
  <div
    className="diff-stat__square bg-danger"
  />
</div>
`;

exports[`DiffStatStack 1`] = `
<div
  className="d-flex flex-column align-items-center"
>
  <div
    className="diff-stat pb-1"
    data-tooltip="1 addition, 2 changes, 3 deletions"
  >
    <strong
      className="text-success mr-1"
    >
      +
      1
    </strong>
    <strong
      className="text-warning mr-1"
    >
      •
      2
    </strong>
    <strong
      className="text-danger"
    >
      −
      3
    </strong>
  </div>
  <div
    className="diff-stat__squares"
  >
    <div
      className="diff-stat__square bg-success"
    />
    <div
      className="diff-stat__square bg-warning"
    />
    <div
      className="diff-stat__square bg-danger"
    />
    <div
      className="diff-stat__square bg-danger"
    />
    <div
      className="diff-stat__square bg-danger"
    />
  </div>
</div>
`;
